--- a/index.html
+++ b/index.html
@@ -8,14 +8,10 @@
 
   <link rel="stylesheet" href="weatherly.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"
-    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-    crossorigin=""/>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
 
-    <!-- 
-    integrity and crossorigin attributes for security and CORS handling.
-    Subresource Integrity (SRI) ensures the browser verifies the file's hash before executing it.
-    -->
+  <!-- Subresource Integrity (SRI) ensures the browser verifies the file's hash before executing it.-->
+
 </head>
 <body>
 
@@ -37,8 +33,8 @@
     <div id="map"></div>
 </div>
 
-<script src="weatherlyVisual-Crossing.js"></script>
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+<script src="weatherlyVisual-Crossing.js"></script>
   
 </body>
 </html>
